feat(测试计划): 报告用例详情支持测试集查询